--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,13 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+
+/* Hide horizontal scrollbar but keep scroll functionality */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
